--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-parallax": "^3.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.0.5",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
